--- a/index.html
+++ b/index.html
@@ -12,8 +12,21 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
-      <h1>test of git branch</h1>
+      <section class="card" id="html-section">
+
+      </section>
+   
+      <section class="card" id="css-section">
+   
+      </section>
+   
+      <section class="card" id="git-section">
+   
+      </section>
+   
+      <section class="card" id="javascript-section">
+   
+      </section>
     </main>
 
     <footer>
